<resources>
    <string name="app_name">MyMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">SUBMIT</string>
    <string name="registration">Registration</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="logout">LOGOUT</string>
</resources>