<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".Registration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/registration"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/fullname"
            android:hint="@string/enter_full_name"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/username"
            android:hint="@string/enter_username"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/password"
            android:hint="@string/enter_password"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Error while logging in"
        android:textColor="@color/red"
        android:visibility="gone"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="Click here to login"
        android:layout_height="wrap_content"/>

</LinearLayout>